# coding-interview-bonsai

./: README.md  pyproject.toml
lib/: __init__.py  string.py
