[project]
name = "coding-interview-bonsai"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4

exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  ".ruff_cache",
  ".mypy_cache",
]


[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
preview = false

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
